# mixtabfill_repo

./: IF2_PATRON.csv  README.md  RF_S21_28to31GHz.csv  buc_spur_predictor.py  ltc5553_5p83g_0p95g_upconv_spurs.csv  ltc5553_5p83g_1p7g_upconv_spurs.csv  ltc5553_5p83g_2p45g_upconv_spurs.csv  mixer_spur_sanity_checker.py  mixer_spur_scan.py  mixer_spur_sweep.py  mixer_spur_sweeper.py  mixer_spur_sweeper_M2.py  plot_buc_sweep.py  pyproject.toml  replot.py  run_M1.py  run_M2.py  spur_spike_analyzer.py
ADMV1550_spur_sweep_lo21p0g_if6p5g_8p0g_15m/: spur_results_lo_21.000000GHz_if_6500.000MHz.csv  spur_results_lo_21.000000GHz_if_6515.000MHz.csv  spur_results_lo_21.000000GHz_if_6530.000MHz.csv  spur_results_lo_21.000000GHz_if_6545.000MHz.csv  spur_results_lo_21.000000GHz_if_6560.000MHz.csv  spur_results_lo_21.000000GHz_if_6575.000MHz.csv  spur_results_lo_21.000000GHz_if_6590.000MHz.csv  spur_results_lo_21.000000GHz_if_6605.000MHz.csv  spur_results_lo_21.000000GHz_if_6620.000MHz.csv  spur_results_lo_21.000000GHz_if_6635.000MHz.csv  spur_results_lo_21.000000GHz_if_6650.000MHz.csv  spur_results_lo_21.000000GHz_if_6665.000MHz.csv  spur_results_lo_21.000000GHz_if_6680.000MHz.csv  spur_results_lo_21.000000GHz_if_6695.000MHz.csv  spur_results_lo_21.000000GHz_if_6710.000MHz.csv  spur_results_lo_21.000000GHz_if_6725.000MHz.csv  spur_results_lo_21.000000GHz_if_6740.000MHz.csv  spur_results_lo_21.000000GHz_if_6755.000MHz.csv  spur_results_lo_21.000000GHz_if_6770.000MHz.csv  spur_results_lo_21.000000GHz_if_6785.000MHz.csv  spur_results_lo_21.000000GHz_if_6800.000MHz.csv  (+81 more)
(+817 files in other folders)
