[project]
name = "mixtabfill-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyvisa>=1.15.0",
    "rsfsw>=6.0.0",
    "rsinstrument>=1.122.0",
    "rssmab>=5.30.133",
    "rssmbv>=5.30.48",
]
